--- a/client/src/styles/UserEmail.css
+++ b/client/src/styles/UserEmail.css
@@ -1,21 +1,27 @@
 body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background: #0A1828;
+}
+
+.center-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
-  background: #f3f3f3;
+  background: #f3f3f3; /* Add your background color here */
 }
 
 .user-email-container {
   display: flex;
   border-radius: 20px;
   overflow: hidden;
-  background: hsl(213deg 85% 97%);
-  box-shadow: 0 0 2em hsl(231deg 62% 94%);
-  width: 100%; 
-  height: 200px;
-  max-width: 800px; 
+  background: #fff;
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
+  height: 400px;
+  width: 800px;
+  margin: 50px auto;
 }
 
 .left-half {
@@ -23,51 +29,81 @@ body {
   padding: 2em;
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 1.5em;
+  text-align: center;
+
 }
 
 .right-half {
   flex: 1;
   overflow: hidden;
+  background-image: url('../images/collagePeliculas.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
 }
 
-input {
+.user-email-container .left-half input {
   outline: none;
-  border: none;
-  background: hsl(0deg 0% 100%);
-  box-shadow: 0 0 2em hsl(231deg 62% 94%);
+  border: 1px solid #ccc;
+  background: #fff;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   padding: 1em;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-  border-radius: 10px;
-  color: hsl(0deg 0% 30%);
-
-  &::placeholder {
-    color: hsl(0deg 0% 0%);
-    font-size: 0.9em;
-  }
+  border-radius: 5px;
+  color: #333;
+  display: block;
 }
 
-button {
+.user-email-container .left-half input::placeholder {
+  color: #999;
+  font-size: 0.9em;
+}
+
+#btnEntrar {
   cursor: pointer;
   padding: 1em;
-  background: hsl(233deg 36% 38%);
-  color: hsl(0 0 100);
+  background: #A239CA;
+  color: #fff;
   border: none;
-  border-radius: 30px;
+  border-radius: 5px;
   font-weight: 600;
-  margin-top: 8px;
+  transition: background 0.3s;
+  margin-top: 40px;
+}
+
+button:hover {
+  background: #45aaf0;
 }
 
 .footer {
   display: flex;
-  font-size: 0.7em;
-  color: hsl(0deg 0% 37%);
-  gap: 14em;
-  padding-bottom: 10em;
+  font-size: 0.9em;
+  color: #555;
+  gap: 1em;
+  padding-top: 1em;
+  margin: auto;
 
   span {
     cursor: pointer;
   }
+}
+
+.custom-toast {
+  background: #61dafb;
+  color: #fff;
+}
+
+.user-email-container .left-half .form {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-email-container .left-half .form button {
+  align-self: flex-start; 
+}
+
+.user-email-container .left-half .footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  margin-top: 1em; 
 }
